--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "weather-app",
-  "homepage": "https://Esraa187.github.io/weather-app",
+  "homepage": "https://Esraa187.github.io/weather-app/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
